tests/tooling/fixtures/native/recovery/negative/negative_misplaced_qualifier_after_param_type_pure.objc3
// Negative fixture: declaration qualifiers are not allowed after parameter type annotations.
// Expected diagnostic code(s): O3P100.
module NegativeMisplacedQualifierAfterParamTypePure;

fn add(lhs: i32 pure, rhs: i32) -> i32;

fn main() -> i32 {
  return 0;
}
